auto snapshots: stage 2
